[package]
edition = "2021"
name = "ipdb-rust"
version = "0.1.1"

description = "Library for reading IPIP.net's IPDB database files"
include = ["/Cargo.toml", "/benches/*.rs", "/src/**/*.rs", "/README.md", "/LICENSE"]
license = "ISC"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ipdb"
path = "src/ipdb-rust/lib.rs"

[[bin]]
name = "ipdb-cli"
path = "src/ipdb-cli/main.rs"

[[bench]]
harness = false
name = "lookup"

[features]
default = []
mmap = ["memmap2"]
unsafe-str-decode = []

[dependencies]
lexopt = "0.2.1"
memmap2 = {version = "0.5.0", optional = true}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[dev-dependencies]
criterion = "0.4"
fake = "2.4"
rayon = "1.5"
